# orm-note

./: .gitignore  conf.py  connect_mysql.py  connect_pg.py  custom_type.py  otherconf.py  process_large_data.py  pydant_test.py  pydant_usage.py  pydantic_usage.py  pyproject.toml  setting.py
fakedata/: 3500常用字.txt  __init__.py  factory.py  fakedata.py  fakedata2_deprecated.py  faker.py  rule.py
mysql-driver/: mysqlconnector_usage.py  pymysql_usage.py
peewee/: db_model.py  dml.py
postgresql-driver/: asyncpg_howto.py  asyncpg_type.py  compare_pg_driver.py  compare_pg_driver.xlsx  copy_example.py  iter.py  psycopg_howto.py
pw/: db.py  dml.py  model.py  reflect.py
sa/: column_util.py  create_table.py  fakedata.py  reflect.py  run_fakedata.py  sa_dml.py  sa_jsonfield.py  sa_usercase.py  sa_utils.py  session.py  sqlbuild.py
sa/dml/: delete.py  fist_row.py  insert.py  iter.py  join.py  jsonfield.py  notin.py  query.py  query_expr.py  update.py
sa/model/: __init__.py  example.py  relationship.py  usercase.py
sql/: DDL.sql  DML.sql  asyncpg_howto.py  asyncpg_type.py  functions.sql  pg_datatype.txt  pg_dump.sh  psycopg_howto.py  常用.sql  批量删除表.sql
