[project]
name = "orm-note"
version = "0.1.0"
description = ""
authors = [
    {name = "uuip",email = "uuip@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
    "sqlalchemy (>=2.0.43)",
    "pydantic (>=2.11.9)",
    "pydantic-settings (>=2.11.0)",
    "pyyaml (>=6.0.2)",
    "pandas (>=2.3.2)",
    "mimesis (>=18.0.0)",
    "asyncpg (>=0.30.0)",
    "psycopg[binary,pool] (>=3.2.10)",
    "mysql-connector-python (>=9.4.0,<10.0.0)",
    "pymysql (>=1.1.2,<2.0.0)",
    "gevent (>=25.9.1,<26.0.0)",
]

[tool.poetry]
package-mode = false
