[project]
name = "orm-note"
version = "0.1.0"
description = ""
authors = [
    {name = "uuip",email = "uuip@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
    "sqlalchemy (>=2.0.45)",
    "pydantic (>=2.12.5)",
    "pydantic-settings (>=2.12.0)",
    "pyyaml (>=6.0.3)",
    "pandas (>=2.3.3)",
    "mimesis (>=18.0.0)",
    "asyncpg (>=0.31.0)",
    "psycopg[binary,pool] (>=3.3.2)",
    "mysql-connector-python (>=9.5.0)",
]

[tool.poetry]
package-mode = false
